--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Hola, esta es una PWA!</h1>
-    <p>Puedes instalar esta app desde el navegador si accedes desde <code>https://appeisa.com.py/Eir3/</code>.</p>
+    <p>Puedes instalar esta app desde el navegador si accedes desde <code>https://adrian-avalos.github.io/pruebaa/</code>.</p>
 
     <script>
         if ('serviceWorker' in navigator) {
@@ -21,3 +21,4 @@
     </script>
 </body>
 </html>
+
